# tinylamb

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Database.cc  Database.hpp  GEMINI.md  LICENSE.txt  Operation.cc  Operation.hpp  Page.cc  Page.hpp  PagePool.cc  PagePool.hpp  PageTest.cc  README.md  Row.hpp  catalog.hpp  catalog_test.cpp  constants.hpp  database.cc  database.cpp  database.hpp  database_test.cpp  lock_manager.hpp  log_message.cpp  log_message.hpp  log_record.hpp  logger.hpp  logger_test.cpp  logging.hpp  logging_test.cpp  macro.hpp  main.cpp  operation.cpp  operation.hpp  page.cpp  page.hpp  page_manager.hpp  page_manager_test.cpp  (+8 more)
.github/workflows/: brakeman.yml  clang-format.yml  codeql-analysis.yml  flawfinder.yml  run-ctest.yml  xanitizer.yml
common/: README.md  constants.hpp  converter.hpp  debug.cpp  debug.hpp  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  env_endian.hpp  log_message.cpp  log_message.hpp  log_message_test.cpp  random_string.hpp  ring_buffer.hpp  serdes.cpp  serdes.hpp  status_or.cpp  status_or.hpp  test_util.hpp  vm_cache.hpp  vm_cache_impl.cpp  vm_cache_impl.hpp  vm_cache_test.cpp
database/: README.md  catalog.cpp  catalog.hpp  catalog_test.cpp  database.cpp  database.hpp  database_test.cpp  page_storage.cpp  page_storage.hpp  query_data.hpp  relation_storage.cpp  relation_storage.hpp  transaction_context.cpp  transaction_context.hpp
executor/: README.md  aggregation.cpp  aggregation.hpp  constant_executor.cpp  constant_executor.hpp  cross_join.cpp  cross_join.hpp  executor.hpp  executor_base.hpp  executor_test.cpp  full_scan.cpp  full_scan.hpp  hash_join.cpp  hash_join.hpp  index_join.cpp  index_join.hpp  index_only_scan.cpp  index_only_scan.hpp  index_scan.cpp  index_scan.hpp  insert.cpp  insert.hpp  named_expression.hpp  projection.cpp  projection.hpp  selection.cpp  selection.hpp  update.cpp  update.hpp
expression/: README.md  aggregate_expression.cpp  aggregate_expression.hpp  binary_expression.cpp  binary_expression.hpp  case_expression.cpp  case_expression.hpp  column_value.cpp  column_value.hpp  constant_value.hpp  expression.cpp  expression.hpp  expression_base.hpp  expression_test.cpp  function_call_expression.cpp  function_call_expression.hpp  in_expression.cpp  in_expression.hpp  named_expression.cpp  named_expression.hpp  unary_expression.cpp  unary_expression.hpp
index/: README.md  b_plus_tree.cpp  b_plus_tree.hpp  b_plus_tree_concurrent_test.cpp  b_plus_tree_fuzzer.cpp  b_plus_tree_fuzzer.hpp  b_plus_tree_fuzzer_replay.cpp  b_plus_tree_iterator.cpp  b_plus_tree_iterator.hpp  b_plus_tree_iterator_test.cpp  b_plus_tree_test.cpp  index.cpp  index.hpp  index_scan_iterator.cpp  index_scan_iterator.hpp  index_scan_iterator_test.cpp  index_schema.cpp  index_schema.hpp  lsm_tree.cpp  lsm_tree.hpp  lsm_tree_fuzzer.cpp  lsm_tree_fuzzer.hpp  lsm_tree_fuzzer_replay.cpp  lsm_tree_test.cpp
index/lsm_detail/: blob_file.cpp  blob_file.hpp  blob_file_test.cpp  cache.cpp  cache.hpp  cache_concurrent_test.cpp  cache_fuzzer.cpp  cache_fuzzer.hpp  cache_fuzzer_replay.cpp  lsm_view.cpp  (+12 more)
page/: README.md  branch_page.cpp  branch_page.hpp  branch_page_test.cpp  catalog_page.cpp  catalog_page.hpp  catalog_page_test.cpp  foster_pair.hpp  free_page.hpp  index_key.hpp  internal_page.cpp  internal_page.hpp  internal_page_test.cpp  leaf_page.cpp  leaf_page.hpp  leaf_page_fuzzer.cpp  leaf_page_fuzzer.hpp  leaf_page_fuzzer_replay.cpp  leaf_page_test.cpp  meta_page.cpp  meta_page.hpp  page.cpp  page.hpp  page_manager.cpp  page_manager.hpp  page_manager_test.cpp  page_pool.cpp  page_pool.hpp  page_pool_test.cpp  page_ref.cpp  page_ref.hpp  page_test.cpp  page_type.cpp  page_type.hpp  row_page.cpp  row_page.hpp  row_page_concurrent_test.cpp  row_page_fuzzer.cpp  row_page_fuzzer.hpp  row_page_fuzzer_replay.cpp  (+4 more)
parser/: ast.hpp  parser.cpp  parser.hpp  parser_test.cpp  pratt_parser.cpp  pratt_parser.hpp  pratt_parser_test.cpp  token.hpp  tokenizer.cpp  tokenizer.hpp  tokenizer_test.cpp
plan/: README.md  aggregation_plan.cpp  aggregation_plan.hpp  full_scan_plan.cpp  full_scan_plan.hpp  index_only_scan_plan.cpp  index_only_scan_plan.hpp  index_scan_plan.cpp  index_scan_plan.hpp  optimizer.cpp  optimizer.hpp  optimizer_test.cpp  plan.cpp  plan.hpp  plan_base.cpp  plan_base.hpp  plan_test.cpp  product_plan.cpp  product_plan.hpp  projection_plan.cpp  projection_plan.hpp  selection_plan.cpp  selection_plan.hpp
query/: README.md  query_data.cpp  query_data.hpp  query_test.cpp
recovery/: README.md  checkpoint_manager.cpp  checkpoint_manager.hpp  checkpoint_manager_test.cpp  log_record.cpp  log_record.hpp  log_record_test.cpp  logger.cpp  logger.hpp  logger_fuzzer.cpp  logger_fuzzer.hpp  logger_fuzzer_replay.cpp  logger_test.cpp  recovery.cpp  recovery.hpp  recovery_manager.cpp  recovery_manager.hpp  recovery_manager_test.cpp  recovery_test.cpp
table/: README.md  b_plus_tree.cpp  b_plus_tree.hpp  b_plus_tree_iterator.cpp  b_plus_tree_iterator_test.cpp  b_plus_tree_test.cpp  catalog.cpp  catalog_test.cpp  fake_table.cpp  fake_table.hpp  full_scan_iterator.cpp  full_scan_iterator.hpp  full_scan_iterator_test.cpp  index.cpp  index.hpp  index_scan_iterator.cpp  index_scan_iterator.hpp  index_scan_iterator_test.cpp  index_test.cpp  iterator.hpp  iterator_base.hpp  table.cpp  table.hpp  table_concurrent_test.cpp  table_fuzzer.cpp  table_fuzzer.hpp  table_fuzzer_replay.cpp  table_interface.hpp  table_statistics.cpp  table_statistics.hpp  table_statistics_test.cpp  table_test.cpp
transaction/: README.md  lock_manager.cpp  lock_manager.hpp  transaction.cpp  transaction.hpp  transaction_manager.cpp  transaction_manager.hpp  transaction_test.cpp
type/: README.md  catalog.cpp  catalog.hpp  catalog_test.cpp  column.cpp  column.hpp  column_name.cpp  column_name.hpp  column_name_test.cpp  column_test.cpp  constraint.cpp  constraint.hpp  constraint_test.cpp  function.cpp  function.hpp  row.cpp  row.hpp  row_test.cpp  schema.cpp  schema.hpp  schema_test.cpp  type.cpp  type.hpp  value.cpp  value.hpp  value_fuzzer.cpp  value_test.cpp  value_type.hpp
